--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "meaw.city",
+  "name": "meowth",
   "private": true,
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "meteor-node-stubs": "~0.2.0"
   }
 }
